--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 10px;
+  /* margin: 0; */
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+button {
+  border: 1px solid black;
+  padding:10px;
+  /* width:100px; */
+  margin: 3px ;
+  cursor: pointer;
+  background: lightcyan;
+  border-radius: 14px;
+  font-weight: 600;
+}
+
+@keyframes test{
+  0%{ background: lightcyan; color:black;}
+  50%{ background: red; color:white;}
+
+}
+
+button:hover{
+  animation: test 2s linear infinite;
 }
